# cpicom

./: .gitignore  CMakeLists.txt  README.md  TODO
blockdevice/: README.md
blockdevice/include/blockdevice/: blockdevice.h  fileblockdevice.h  flashblockdevice.h
blockdevice/src/: fileblockdevice.c  flashblockdevice.c
build_arm/: CMakeCache.txt  Makefile  TODO  cmake_install.cmake  cpicom.dis  cpicom.elf  cpicom.elf.map  cpicom.hex  cpicom.uf2  dump
build_arm/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake  elf2uf2
build_arm/elf2uf2/boot_uf2_headers/: Makefile  cmake_install.cmake
build_arm/pico-sdk/: Makefile  cmake_install.cmake
build_arm/pico-sdk/docs/: Makefile  cmake_install.cmake
build_arm/pico-sdk/src/: Makefile  cmake_install.cmake
build_arm/pico-sdk/src/common/: Makefile  cmake_install.cmake
build_arm/pico-sdk/src/common/boot_picoboot/: Makefile  cmake_install.cmake
build_arm/pico-sdk/src/common/boot_uf2/: Makefile  cmake_install.cmake
build_arm/pico-sdk/src/common/pico_base/: Makefile  cmake_install.cmake
build_arm/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
build_arm/pico-sdk/src/common/pico_bit_ops/: Makefile  cmake_install.cmake
build_arm/pico-sdk/src/common/pico_divider/: Makefile  cmake_install.cmake
build_arm/pico-sdk/src/common/pico_stdlib/: Makefile  cmake_install.cmake
build_arm/pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
build_arm/pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
build_arm/pico-sdk/src/common/pico_util/: Makefile  cmake_install.cmake
build_arm/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
build_arm/pico-sdk/src/rp2040/hardware_regs/: Makefile  cmake_install.cmake
build_arm/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
build_arm/pico-sdk/tools/: Makefile  cmake_install.cmake
console/: README.md
console/include/console/: console.h  console_stdio_vt100.h
console/src/: console_stdio_vt100.c
cpm/: README.md
cpm/include/cpm/: defs.h  limits.h
cpm/src/: bdos.c  bios.c  intf.c  vt.c  vt.h  z80.c
docs/: filesystem_compat_layer.odg
error/: README.md
error/include/error/: error.h
error/src/: error.c
files/: README.md
files/include/files/: compat.h  fileblockdevice.h  filecontext.h  filesystem.h  filesystemlfs.h  filesystemmount.h  fileutil.h  flashblockdevice.h  limits.h
files/src/: compat.c  fileblockdevice.c  filecontext.c  filesystemlfs.c  filesystemmount.c  fileutil.c  flashblockdevice.c  lfs.c  lfs_util.c
fs/: README.md
fs/include/fs/: ffconf.h  ffdiskio.h  filesystem.h  filesystemfat.h  filesystemlfs.h
fs/src/: ff.c  ffdiskio.c  ffsystem.c  filesystemfat.c  filesystemlfs.c  lfs.c  lfs_util.c
klib/: README.md
klib/include/klib/: list.h  string.h
klib/src/: list.c  string.c
log/include/log/: log.h
log/src/: log.c
main/: README.md  main.c
misc/: cpm22disk.tar
picocpm/: README.md
picocpm/include/picocpm/: config.h  picocpm.h
picocpm/src/: config.c  picocpm.c
shell/: README.md
shell/include/shell/: shell.h
shell/src/: cmd_dir.c  cmd_dump.c  cmd_era.c  cmd_format.c  cmd_log.c  cmd_rename.c  cmd_setdef.c  cmd_stat.c  cmd_type.c  cmd_untar.c  cmd_yrecv.c  cmd_ysend.c  shell.c
ymodem/: README.md
ymodem/include/ymodem/: ymodem.h
ymodem/src/: ymodem.c
(+100 files in other folders)
