cmake_minimum_required (VERSION 3.13)
set (BINARY "cpicom")
set (PROJ "cpicom")
set (CMAKE_C_FLAGS_RELEASE "-Wall -Wextra")
set (CMAKE_C_FLAGS_DEBUG "-g -Wall -Wextra")
include (pico_sdk_import.cmake)
project (${PROJ})
file (GLOB log_src CONFIGURE_DEPENDS "log/src/*.c")
file (GLOB console_src CONFIGURE_DEPENDS "console/src/*.c")
file (GLOB files_src CONFIGURE_DEPENDS "files/src/*.c")
file (GLOB error_src CONFIGURE_DEPENDS "error/src/*.c")
file (GLOB shell_src CONFIGURE_DEPENDS "shell/src/*.c")
file (GLOB klib_src CONFIGURE_DEPENDS "klib/src/*.c")
file (GLOB ymodem_src CONFIGURE_DEPENDS "ymodem/src/*.c")
file (GLOB cpm_src CONFIGURE_DEPENDS "cpm/src/*.c")
file (GLOB picocpm_src CONFIGURE_DEPENDS "picocpm/src/*.c")
pico_sdk_init()
add_executable (${BINARY} ${log_src} ${error_src} ${console_src} ${files_src} ${shell_src} ${klib_src} ${ymodem_src} ${cpm_src} ${picocpm_src} "main/main.c")
target_include_directories (${BINARY} PUBLIC log/include error/include console/include files/include shell/include klib/include ymodem/include cpm/include picocpm/include)
pico_enable_stdio_usb (${BINARY} 1)
pico_enable_stdio_uart (${BINARY} 0)
pico_add_extra_outputs (${BINARY})
if (PICO_ON_DEVICE)
target_link_libraries (${BINARY} pico_stdlib hardware_flash hardware_sync)
else()
target_link_libraries (${BINARY} pico_stdlib)
endif()

